@@ -6,6 +6,9 @@ Revision history for Test-TempDir-Tiny
 
     [Added]
 
+    - Added 'in_tempdir' function to run code reference in a temporary
+      directory
+
     - Setting $ENV{PERL_TEST_TEMPDIR_TINY_NOCLEANUP} to a true value
       will prevent any directories from being cleaned up
 
